--- a/app/src/main/res/layout/aty_add_food.xml
+++ b/app/src/main/res/layout/aty_add_food.xml
@@ -16,6 +16,7 @@
         <TextView
             android:textSize="16sp"
             android:id="@+id/right_text"
+            android:text="@string/finish"
             android:textColor="@color/white"
             android:layout_marginRight="16dp"
             android:layout_marginEnd="16dp"
