--- a/app/src/main/res/layout/aty_forget.xml
+++ b/app/src/main/res/layout/aty_forget.xml
@@ -18,7 +18,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,7 +34,6 @@
                 android:inputType="phone"
                 android:hint="@string/register_phone_number"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:padding="8dp" />
 
 
@@ -79,8 +78,7 @@
                 android:hint="@string/set_password"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:padding="8dp"
-                android:singleLine="true" />
+                android:padding="8dp" />
 
             <EditText
                 android:id="@+id/login_copy_password"
@@ -93,8 +91,7 @@
                 android:gravity="center_vertical"
                 android:hint="@string/copy_password"
                 android:maxLines="1"
-                android:padding="8dp"
-                android:singleLine="true" />
+                android:padding="8dp" />
             <TextView
                 android:id="@+id/aty_reset_error"
                 android:layout_width="wrap_content"
