--- a/app/src/main/res/layout/activity_public_activity.xml
+++ b/app/src/main/res/layout/activity_public_activity.xml
@@ -247,15 +247,15 @@
                     android:id="@+id/tog_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_centerVertical="true"
-                    app:colorOn="@color/colorPrimary"
                     app:colorOff="@color/white"
-                    app:textOn="是"
-                    app:textOff="否" />
+                    app:colorOn="@color/colorPrimary"
+                    app:textOff="否"
+                    app:textOn="是" />
             </RelativeLayout>
 
         </LinearLayout>
