--- a/app/src/main/res/layout/list_item_progress.xml
+++ b/app/src/main/res/layout/list_item_progress.xml
@@ -4,18 +4,18 @@
     android:layout_height="72dp">
 
     <LinearLayout
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
         <ProgressBar
-            android:layout_gravity="center_vertical"
             android:id="@+id/progress"
             android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical" />
         <TextView
-            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:text="@string/loading"/>
     </LinearLayout>
 </FrameLayout>
