--- a/app/src/main/res/layout/activity_activity_comment.xml
+++ b/app/src/main/res/layout/activity_activity_comment.xml
@@ -60,8 +60,8 @@
 
         <TextView
             android:id="@+id/activity_post_commit"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="72dp"
+            android:layout_height="36dp"
             android:layout_gravity="center_vertical"
             android:layout_margin="10dp"
             android:background="@drawable/bg_send_btn"
