--- a/app/src/main/res/layout/aty_info.xml
+++ b/app/src/main/res/layout/aty_info.xml
@@ -20,12 +20,12 @@
 
         <ImageView
             android:id="@+id/aty_info_more"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:padding="12dp"
-            android:src="@mipmap/more"
-            android:layout_width="48dp"
-            android:layout_height="48dp" />
+            android:src="@mipmap/more" />
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/aty_info_avatar"
             android:layout_width="80dp"
@@ -78,45 +78,47 @@
                 android:layout_marginStart="8dp" />
         </LinearLayout>
         <LinearLayout
-            android:visibility="gone"
             android:id="@+id/aty_info_like_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/aty_info_xin"
             android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:visibility="gone">
             <TextView
-                android:textSize="12sp"
-                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="已被"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_marginLeft="2dp"
-                android:layout_marginStart="2dp"
-                android:layout_marginRight="2dp"
-                android:layout_marginEnd="2dp"
-                android:textColor="@color/red"
-                android:id="@+id/aty_info_like_count"
-                android:textStyle="italic"
-                android:textSize="18sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="12sp"
                 android:textColor="@color/white"
-                android:text="人喜欢"
+                android:textSize="12sp" />
+            <TextView
+                android:id="@+id/aty_info_like_count"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginStart="2dp"
+                android:textColor="@color/red"
+                android:textSize="18sp"
+                android:textStyle="italic" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="人喜欢"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
 
         </LinearLayout>
     </RelativeLayout>
 
     <android.support.design.widget.TabLayout
-        app:tabSelectedTextColor="@color/colorPrimary"
-        app:tabTextColor="@color/colorGray"
         android:id="@+id/aty_info_tabs"
         android:layout_width="match_parent"
-        android:layout_height="40dp" />
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:tabIndicatorColor="@color/blue_100"
+        app:tabSelectedTextColor="@color/colorPrimary"
+        app:tabTextColor="@color/colorGray" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/aty_info_pager"
