--- a/app/src/main/res/layout/fgt_community_topic_cell.xml
+++ b/app/src/main/res/layout/fgt_community_topic_cell.xml
@@ -1,56 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingBottom="2dp"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
-    android:paddingTop="2dp"
-    android:paddingBottom="2dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:paddingTop="2dp">
     <com.facebook.drawee.view.SimpleDraweeView
-        fresco:actualImageScaleType="centerCrop"
-        fresco:roundedCornerRadius="3dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:id="@+id/community_topic_cell_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        fresco:actualImageScaleType="centerCrop"
+        fresco:roundedCornerRadius="3dp" />
     <TextView
-        android:textSize="8sp"
-        android:textColor="#ef4991"
-        android:background="@drawable/bg_community_text"
-        android:layout_marginRight="4dp"
+        android:id="@+id/number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
-        android:paddingTop="2dp"
+        android:background="@drawable/bg_community_text"
+        android:paddingBottom="2dp"
         android:paddingEnd="4dp"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
         android:paddingStart="4dp"
-        android:paddingBottom="2dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:id="@+id/number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:paddingTop="2dp"
+        android:textColor="#ef4991"
+        android:textSize="12sp" />
     <TextView
+        android:id="@+id/community_topic_cell_theme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/community_topic_cell_image"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"
         android:textColor="#3e3e3e"
-        android:layout_below="@id/community_topic_cell_image"
-        android:id="@+id/community_topic_cell_theme"
-        android:textSize="14sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textSize="14sp" />
     <TextView
-        android:textColor="#b1b1b1"
-        android:layout_centerHorizontal="true"
-        android:lines="1"
-        android:layout_marginTop="2dp"
-        android:layout_below="@id/community_topic_cell_theme"
         android:id="@+id/community_topic_cell_note"
-        android:textSize="10sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/community_topic_cell_theme"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="2dp"
+        android:lines="1"
+        android:textColor="#b1b1b1"
+        android:textSize="14sp" />
 </RelativeLayout>
