--- a/app/src/main/res/layout/fgt_message.xml
+++ b/app/src/main/res/layout/fgt_message.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    android:background="@color/grey_gap"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/aty_message_recycler"
-    android:layout_weight="1"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:background="@color/grey_gap" />
